Add messages for successful and unsuccesfull gist's creation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,5 @@
 
 en:
   question-gist-description: "Question %{statement} from TestGuru"
+  successful-gist-creation:  "Gist %{link} was successfully created"
+  unsuccessful-gist-creation: "Не удалось создать гист"
